dev/recommendation/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation
  namespace: yas-dev
  labels:
    app: recommendation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation
  template:
    metadata:
      labels:
        app: recommendation
    spec:
      containers:
      - name: recommendation
        image: ghcr.io/nashtech-garage/yas-recommendation:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m
