dev/recommendation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendation
  namespace: yas-dev
  labels:
    app: recommendation
spec:
  type: ClusterIP
  selector:
    app: recommendation
  ports:
  - port: 80
    targetPort: 80
